RESOLVED FIXED288421
objectIsRelayoutBoundary doesn't account for baseline changes across the boundary
https://bugs.webkit.org/show_bug.cgi?id=288421
Summary objectIsRelayoutBoundary doesn't account for baseline changes across the boun...
Matt Woodrow
Reported 2025-02-24 15:41:14 PST
Being an independent formatting context isn't sufficient to be a layout boundary, as placement within the formatting context can affect the baseline positioning of things outside. We need to prevent these being treated as boundaries if they are inside an inline formatting context.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-24 15:41:24 PST
Matt Woodrow
Comment 2 2025-02-24 15:50:26 PST
EWS
Comment 3 2025-02-26 11:14:13 PST
Committed 291150@main (6dd21dc9f928): <https://commits.webkit.org/291150@main> Reviewed commits have been landed. Closing PR #41248 and removing active labels.
Matt Woodrow
Comment 4 2025-03-24 19:27:35 PDT
Note You need to log in before you can comment on or make changes to this bug.